<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <!-- Avatar Image -->
        <ImageView
            android:id="@+id/avatar_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_starface_logo"
        android:contentDescription="@string/avatar" />

        <!-- First Name -->
        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

        <!-- Last Name -->
        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>

        <!-- Email -->
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>

        <!-- Email Verification -->
        <TextView
            android:id="@+id/email_verification_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_not_verified"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/verify_email_button"
            style="@style/Widget.MaterialComponents.Button"
            android:backgroundTint="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_bold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/verify_email"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="8dp"/>

        <!-- Password -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            />

        <!-- Confirm Password -->
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>

        <!-- Save Button -->
        <Button
            android:id="@+id/save_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/sf_pro_display_bold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>
</ScrollView>
