<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_vertical"
    android:layout_gravity="center_vertical"
    android:background="@color/background_color"
    tools:context=".EnterScreenFragment">

    <!-- App Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@mipmap/ic_starface_logo"
        android:contentDescription="@string/app_name" />

    <!-- Welcome Message -->
    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_message"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Introduction Text -->
    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/instructions"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />

    <!-- Action Button -->
</RelativeLayout>
